# xfem-concrete

./: .gitignore  AUDIT_SUMMARY.md  BLOQUE2_STATUS.md  BOND_SLIP_HANG_DIAGNOSTIC.md  CHANGELOG_bond_gamma.md  CONVERGENCE_FIXES.md  ENERGY_TRACKING.md  ENERGY_TRACKING_IMPLEMENTATION.md  EXAMPLES_ENGINE_COMPATIBILITY_REPORT.md  FINAL_MERGE_FIX_REPORT.md  FUNCTION_SUMMARY.md  HOWTO_THESIS_CASES.md  IMPLEMENTATION_STATUS.md  LICENSE  MERGE_BLOCKERS_REPORT.md  NONLINEAR_IMPLEMENTATION_PLAN.md  PARTB_C_D_IMPLEMENTATION_SUMMARY.md  PHASE_1_2_IMPLEMENTATION_SUMMARY.md  PR_SUMMARY.md  PR_VERIFICATION_CHECKLIST.md  README.md  REFACTOR_REPORT.md  TASK3_ASSEMBLY_GUIDE.md  TASK5_DISSIPATION_GUIDE.md  TASK_COMPLETION_SUMMARY.md  THESIS_PARITY_STATUS.md  md_to_pdf.py  pyproject.toml  test_bond_simple.py  test_smoke_integration.py
LICENSES/: CDP_GENERATOR_LICENSE
benchmarks/: __init__.py  benchmark_bond_slip.py  benchmark_scaling.py
calibration/: __init__.py  fit_bond_parameters.py
docs/: CDP_GENERATOR_README.md  INTEGRATION_NOTES.md  NONLINEAR_FEATURES_GUIDE.md  P3_DOWEL_ACTION_STATUS.md  PATCH_NOTES.md  ROADMAP_NUMBA.md  architecture.md  datasets.md  development.md  examples.md  technical-basis.md  testing.md  thesis_parity.md  units-and-signs.md  validation.md
examples/: diagnose_bond_stiffness.py  diagnose_stiffness_scale.py  ex_crack_coalescence_junction.py  ex_rebar_heaviside_angle.py  ex_transverse_contact.py  gutierrez_plots.py  pullout_correct_bcs.py  pullout_direct_assembly.py  pullout_extended_iterations.py  pullout_minimal_working.py  run_beam_xfem.py  run_gutierrez_beam.py  test_bond_law_regularization.py  test_bond_law_stiffness.py  test_bond_minimal.py  test_bond_slip_debug.py  test_bond_slip_forces_at_zero.py  test_bond_slip_matrix_debug.py  test_bond_slip_simple.py  test_diagonal_scaling.py  test_first_step_debug.py  test_full_assembly_debug.py  test_newton_zero.py  test_nonlinear_concrete_validation.py  test_pullout_quick.py  validation_bond_slip_pullout.py
report/: generate_appendix.py
scripts/: regression_manifest.py  run_examples_smoke.py  run_gutierrez_matrix.py  run_tests.py
tests/: conftest.py  process_signal_runner.py  process_utils.py  test_bloque2_return_bundle.py  test_bloque3_cyclic_driver.py  test_bloque4_wall_case.py  test_bloque7_integration.py  test_energy_hht.py  (+54 more)
(+158 files in other folders)
