[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xfem-clean-ordered"
version = "0.1.0"
description = "Ordered XFEM prototype (stable solver reorganized into clean kernel structure)."
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "matplotlib"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
