[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xfem-clean-ordered"
version = "0.1.0"
description = "Ordered XFEM prototype (stable solver reorganized into clean kernel structure)."
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "matplotlib"]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "numpy",
    "scipy",
    "numba",
    "pyyaml",
    "matplotlib",
    "pandas",
    "openpyxl",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
norecursedirs = ["examples", "docs", "outputs", "tests/tmp"]
markers = [
    "slow: marks tests as slow (run with pytest -m slow)",
    "fast: marks tests as fast (default)",
]
